--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
 <body>
   <h1>Plants</h1>
   <p>QR pages for monthly noticeboard plant features.</p>
+  <section class="card" id="golden-bristle">
+  <h2 class="name">Golden-bristle Grass</h2>
+  <div class="latin">Setaria sphacelata</div>
+
+  <p>
+    A tufted grass, narrow, blue-green leaves.
+    Flowers: Tall golden inflorescences from October to May
+    Value: Attracts birds to the garden, specifically species like the Bronze Mannikins, Common Waxbills, & Weavers, that feed on the seeds. It is also a host plant for various butterfly species.
+    Habitat: Grassland; wetland
+
+  </p>
+
+  <ul>
+    <li>REPLACE WITH BULLET 1 (birds / host plant for Skipper and Brown butterfly species)</li>
+    <li>REPLACE WITH BULLET 2 (Oct-May / Tufted grass with long, narrow leaves)</li>
+    <li>REPLACE WITH BULLET 3 (Bridge between terrestrial and wetland habitats. Critical food source for seed-eating birds. Provide essential shelter and breeding grounds for a vast array of wetland-dependent insects, which form the base of the habitat's food web. Helps to filter water of harmful chemicals.</li>
+  </ul>
+
+  <a class="toplink" href="#top">Back to top</a>
+</section>
+
 </body>
 </html>
