--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Plants – Noticeboard QR Pages</title>
-  <style>
-    body{font-family:system-ui,sans-serif;padding:1.2rem;line-height:1.5;color:#222}
-    h1{margin:0 0 .5rem}
-    p{color:#444}
-  </style>
+ <style>
+  body{font-family:system-ui,sans-serif;padding:1.2rem;line-height:1.5;color:#222}
+  h1{margin:0 0 .5rem}
+  p{color:#444}
+
+  .latin{font-style:italic;color:#666}
+</style>
 </head>
 <body>
   <h1>Plants</h1>
@@ -23,9 +25,9 @@
   </p>
 
   <ul>
-    <li>1. Seed Production: The large, golden seed heads (panicles) are a critical food source for granivorous birds, including the Long-tailed Widowbird, waxbills, and weavers.</li>
-    <li>2. An essential larval host plant for several butterfly species, primarily within the Skipper (Hesperiidae) and Brown (Satyrinae) families. </li>
-    <li>3. Bridge between terrestrial and wetland habitats. Provides essential shelter and breeding grounds for a vast array of wetland-dependent insects, which form the base of the habitat's food web. Helps to filter water of harmful chemicals.</li>
+    <li>Seed Production: The large, golden seed heads (panicles) are a critical food source for granivorous birds, including the Long-tailed Widowbird, waxbills, and weavers.</li>
+    <li>An essential larval host plant for several butterfly species, primarily within the Skipper (Hesperiidae) and Brown (Satyrinae) families. </li>
+    <li>Bridge between terrestrial and wetland habitats. Provides essential shelter and breeding grounds for a vast array of wetland-dependent insects, which form the base of the habitat's food web. Helps to filter water of harmful chemicals.</li>
   </ul>
 
   <a class="toplink" href="#top">Back to top</a>
