--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
     <li>Bridge between terrestrial and wetland habitats. Provides essential shelter and breeding grounds for a vast array of wetland-dependent insects, which form the base of the habitat's food web. Helps to filter water of harmful chemicals.</li>
   </ul>
 
+     <h1>Plants</h1>
+  <p>Plant Info.</p>
+  <section class="card" id="fishbone-cassia">
+  <h2 class="name">Fishbone Cassia</h2>
+  <div class="latin">Chamaecrista mimosoides</div>
+
+  <p>
+    It can grow as an annual herb, a short-lived perennial, or an erect subshrub reaching heights of 0.3 to 1.5 metres. Habitat: Grassland, rocky outcrops, disturbed areas.
+
+  </p>
+
+  <ul>
+    <li>Butterfly Host Plant: It is a primary larval host (caterpillar food) for the African Grass Yellow, the Broad-bordered Grass Yellow, and the Angled Grass Yellow</li>
+    <li>The bright yellow flowers provide nectar and pollen for various indigenous bees and small insects, which in turn support the insectivorous bird populations found in the Mistbelt.. </li>
+    <li>Pioneer Species: It acts as a hardy pioneer, stabilising soil in disturbed patches or along the edges of trails within the reserve, preventing erosion.
+</li>
+  </ul>
+
   <a class="toplink" href="#top">Back to top</a>
 </section>
 
