--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     It can grow as an annual herb, a short-lived perennial, or an erect subshrub reaching heights of 0.3 to 1.5 metres. Habitat: Grassland, rocky outcrops, disturbed areas.
 
   </p>
+    <img src="img/angled-grass-yellow.jpg" alt="Angled Grass Yellow larvae feed on leaves of the Fishbone Cassia">
+<div class="cap">Butterfly feeding on nectar</div>
 
   <ul>
     <li>Butterfly Host Plant: It is a primary larval host (caterpillar food) for the African Grass Yellow, the Broad-bordered Grass Yellow, and the Angled Grass Yellow</li>
