--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Plants – Noticeboard QR Pages</title>
  <style>
-  body{font-family:system-ui,sans-serif;padding:1.2rem;line-height:1.5;color:#222}
+  body{
+    font-family:system-ui,sans-serif;
+    padding:1.2rem;
+    line-height:1.5;
+    color:#222
+  }
+
   h1{margin:0 0 .5rem}
   p{color:#444}
 
-  .latin{font-style:italic;color:#666}
+  .latin{
+    font-style:italic;
+    color:#666
+  }
+
+  img{
+    width:100%;
+    max-width:380px;   /* 👈 THIS is the key line */
+    display:block;
+    margin:0.8rem auto 0.3rem;
+    border-radius:8px;
+  }
+
+  .cap{
+    font-size:0.9rem;
+    color:#666;
+    text-align:center;
+    margin-bottom:0.6rem;
+  }
 </style>
+
 </head>
 <body>
   <h1>Plants</h1>
