--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     A tufted grass with narrow, blue-green leaves. Tall golden inflorescences are seen from October to May. Habitat: Grassland; wetland.
 
   </p>
+    <img src="img/village-weaver.jpg" alt="Weavers feed on the seeds of the Golden Bristle Grass">
+<div class="cap">Butterfly feeding on nectar</div>
 
   <ul>
     <li>Seed Production: The large, golden seed heads (panicles) are a critical food source for granivorous birds, including the Long-tailed Widowbird, waxbills, and weavers.</li>
