--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Plants – Noticeboard QR Pages</title>
- <style>
+<style>
   body{
     font-family:system-ui,sans-serif;
     padding:1.2rem;
     line-height:1.5;
-    color:#222
+    background:#111;     /* dark background */
+    color:#f2f2f2;       /* main text */
   }
 
-  h1{margin:0 0 .5rem}
-  p{color:#444}
+  h1, h2{
+    color:#ffffff;
+  }
+
+  p{
+    color:#dddddd;
+  }
 
   .latin{
     font-style:italic;
-    color:#666
+    color:#bbbbbb;
   }
 
   img{
     width:100%;
-    max-width:380px;   /* 👈 THIS is the key line */
+    max-width:380px;
     display:block;
     margin:0.8rem auto 0.3rem;
     border-radius:8px;
@@ -30,9 +36,20 @@
 
   .cap{
     font-size:0.9rem;
-    color:#666;
+    color:#bbbbbb;
     text-align:center;
     margin-bottom:0.6rem;
+  }
+
+  .card{
+    background:#1a1a1a;     /* slightly lighter than page */
+    border-radius:12px;
+    padding:1rem;
+    margin:1rem 0;
+  }
+
+  a{
+    color:#9fd6b2;          /* soft green link */
   }
 </style>
 
