--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   </p>
     <img src="img/village-weaver.jpg" alt="Weavers feed on the seeds of the Golden Bristle Grass">
-<div class="cap">Butterfly feeding on nectar</div>
+<div class="cap">Village Weaverdiv>
 
   <ul>
     <li>Seed Production: The large, golden seed heads (panicles) are a critical food source for granivorous birds, including the Long-tailed Widowbird, waxbills, and weavers.</li>
