--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   </p>
     <img src="img/angled-grass-yellow.jpg" alt="Angled Grass Yellow larvae feed on leaves of the Fishbone Cassia">
-<div class="cap">Butterfly feeding on nectar</div>
+<div class="cap">Angled grass yellow</div>
 
   <ul>
     <li>Butterfly Host Plant: It is a primary larval host (caterpillar food) for the African Grass Yellow, the Broad-bordered Grass Yellow, and the Angled Grass Yellow</li>
