--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   .cap{
     font-size:0.9rem;
     color:#bbbbbb;
-    text-align:center;
+    text-align:left;
     margin-bottom:0.6rem;
   }
 
