--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
   <section class="card" id="golden-bristle">
   <h2 class="name">Golden-bristle Grass</h2>
   <div class="latin">Setaria sphacelata</div>
+    <img src="img/golden-bristle-grass.jpg" alt="Setaria spacelata - Golden Bristle Grass">
+<div class="cap">Village Weaver</div>
 
   <p>
     A tufted grass with narrow, blue-green leaves. Tall golden inflorescences are seen from October to May. Habitat: Grassland; wetland.
