--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
   <section class="card" id="golden-bristle">
   <h2 class="name">Golden-bristle Grass</h2>
   <div class="latin">Setaria sphacelata</div>
+    <img src="img/golden-bristle-grass.jpg" alt="Weavers feed on the seeds of the Golden Bristle Grass">
+<div class="cap">Golden Bristle Grass</div>
     
   <p>
     A tufted grass with narrow, blue-green leaves. Tall golden inflorescences are seen from October to May. Habitat: Grassland; wetland.
 
   </p>
+    <img src="img/village-weaver.jpg" alt="Weavers feed on the seeds of the Golden Bristle Grass">
+<div class="cap">Village Weaver</div>
     
   <ul>
     <li>Seed Production: The large, golden seed heads (panicles) are a critical food source for granivorous birds, including the Long-tailed Widowbird, waxbills, and weavers.</li>
@@ -79,6 +83,8 @@
   <section class="card" id="fishbone-cassia">
   <h2 class="name">Fishbone Cassia</h2>
   <div class="latin">Chamaecrista mimosoides</div>
+    <img src="img/chamaecrista.jpg" alt="Yellow flowers of the Fishbone Cassia">
+<div class="cap">Chamaecrista mimosoides</div>
 
   <p>
     It can grow as an annual herb, a short-lived perennial, or an erect subshrub reaching heights of 0.3 to 1.5 metres. Habitat: Grassland, rocky outcrops, disturbed areas.
