--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <h2 class="name">Fishbone Cassia</h2>
   <div class="latin">Chamaecrista mimosoides</div>
     <img src="img/chamaecrista.jpg" alt="Yellow flowers of the Fishbone Cassia">
-<div class="cap">Chamaecrista mimosoides</div>
+<div class="cap">Chamaecrista mimosoides - by Elaine Kool</div>
 
   <p>
     It can grow as an annual herb, a short-lived perennial, or an erect subshrub reaching heights of 0.3 to 1.5 metres. Habitat: Grassland, rocky outcrops, disturbed areas.
@@ -96,7 +96,7 @@
 </li>
   </ul>
     <img src="img/angled-grass-yellow.jpg" alt="Angled Grass Yellow larvae feed on leaves of the Fishbone Cassia">
-<div class="cap">Angled grass yellow</div>
+<div class="cap">Angled grass yellow - by Anno Torr</div>
 
   <a class="toplink" href="#top">Back to top</a>
 </section>
