--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
 </head>
 <body>
-  <h1>Plants</h1>
-  <p>Plant Info.</p>
+  <h1>Plant Info</h1>
   <section class="card" id="golden-bristle">
   <h2 class="name">Golden-bristle Grass</h2>
   <div class="latin">Setaria sphacelata</div>
@@ -76,8 +75,7 @@
     <img src="img/village-weaver.jpg" alt="Weavers feed on the seeds of the Golden Bristle Grass">
     <div class="cap">Village Weaver - Dougjj, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons</div>
     
-     <h1>Plants</h1>
-  <p>Plant Info.</p>
+     <h1>Plant Info</h1>
   <section class="card" id="fishbone-cassia">
   <h2 class="name">Fishbone Cassia</h2>
   <div class="latin">Chamaecrista mimosoides</div>
