--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h2 class="name">Fishbone Cassia</h2>
   <div class="latin">Chamaecrista mimosoides</div>
     <img src="img/chamaecrista.jpg" alt="Yellow flowers of the Fishbone Cassia">
-<div class="cap">Chamaecrista mimosoides - by Elaine Kool</div>
+<div class="cap">Fishbone Cassia in Minerva - by Elaine Kool</div>
 
   <p>
     It can grow as an annual herb, a short-lived perennial, or an erect subshrub reaching heights of 0.3 to 1.5 metres. Habitat: Grassland, rocky outcrops, disturbed areas.
